fix mobile navbar logo off-center issue

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -54,6 +54,7 @@
 
     .Logo {
         margin: 0;
+        width: 100px;
     }
 
     .Navbar {
